# mini-api-gateway

./: Cargo.toml  LICENSE  README.md  config.example.yaml
src/: config.rs  error.rs  gateway.rs  lib.rs  main.rs  metrics.rs  pool.rs  proxy.rs  router.rs  tls.rs
src/cache/: memory.rs  mod.rs  redis.rs
src/discovery/: consul.rs  etcd.rs  mod.rs
src/middleware/: auth.rs  cache.rs  cors.rs  logging.rs  metrics.rs  mod.rs  rate_limit.rs
tests/: config_test.rs  integration_test.rs  middleware_test.rs  router_test.rs
