[package]
name = "mini-api-gateway"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
# Async runtime
tokio = { version = "1.44", features = ["full"] }

# HTTP stack
hyper = { version = "1.6", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http = "1.3"
http-body = "1.0"
http-body-util = "0.1"
bytes = "1.10"

# Tower middleware framework
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = [
    "cors",
    "trace",
    "compression-gzip",
    "decompression-gzip",
    "timeout",
    "limit",
    "auth",
    "fs",
    "set-header",
    "request-id",
    "util",
    "follow-redirect",
    "add-extension",
] }

# HTTP client for proxy
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "http2",
    "stream",
    "json",
] }

# TLS
rustls = { version = "0.23", default-features = false, features = ["std", "tls12"] }
tokio-rustls = "0.26"
rustls-pemfile = "2.2"

# Logging / Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "json",
    "fmt",
    "time",
] }
tracing-appender = "0.2"

# Metrics / Prometheus
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
prometheus = { version = "0.13", features = ["process"] }

# Cache
moka = { version = "0.12", features = ["future"] }
redis = { version = "0.29", features = ["tokio-comp", "connection-manager"] }

# Auth
jsonwebtoken = "9.3"
oauth2 = "5.0"

# Serialization / Config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
config = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Async utilities
futures = "0.3"
pin-project = "1.1"
async-trait = "0.1"

# Rate limiting
governor = "0.8"

# Service discovery
# Both Consul and Etcd use REST API via reqwest (avoids protoc dependency)

# Utilities
dashmap = "6.1"
arc-swap = "1.7"
regex = "1.11"
url = "2.5"
uuid = { version = "1.16", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.21"
base64 = "0.22"
num_cpus = "1.16"
serde_bytes = "0.11"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
